[project]
name = "blasync"
version = "0.0.6"
authors = [
  { name="some16", email="" },
]
description = "A tiny package for easy async with Blender"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/some16/blasync"
Issues = "https://github.com/some16/blasync/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.sources]
"src/blasync_some16" = "blasync"

[tool.hatch.build.targets.wheel]
packages = ["src/blasync_some16"]